koo page updates, add moon phase and images
